--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Management System</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
+    <script src="boom.js" defer></script>
     </head>
   <body>
 
@@ -54,49 +54,6 @@
     <main>
       <div id="poster">Your Personal Product Collection.</div>
       <ul id="product-list">
-
-        
-<!-- 
-
-        <li class="product-element">
-          <div class="product-image">
-            <img src="https://stickon-web-mobile-evolution.s3.ap-south-1.amazonaws.com/production/products/base_images/realme-3-pro-newPJQKNQvLYFbwBNHL.png" alt="">
-          </div>
-          <div class="product-description">
-            <h2>Realme 3 pro</h2>
-            <h5>price: 200$</h5>
-            <p>4 GB RAM | 64 GB ROM | Expandable Upto 256 GB
-              16.0 cm (6.3 inch) Full HD+ Display
-              16MP + 5MP | 25MP Front Camera
-              4045 mAh Battery
-              Qualcomm Snapdragon 710 Octa Core 2.2 GHz AIE Processor
-              Dual Nano SIM Slot and Memory Card Slot
-              VOOC Flash Charge 3.0</p>
-            <button class="edit">Edit</button>
-            <button class="delete">Delete</button>
-          </div>
-        </li>
-
-        <li class="product-element">
-          <div class="product-image">
-            <img src="https://stickon-web-mobile-evolution.s3.ap-south-1.amazonaws.com/production/products/base_images/realme-3-pro-newPJQKNQvLYFbwBNHL.png" alt="">
-          </div>
-          <div class="product-description">
-            <h2>Realme 3 pro</h2>
-            <h5>price: 200$</h5>
-            <p>4 GB RAM | 64 GB ROM | Expandable Upto 256 GB
-              16.0 cm (6.3 inch) Full HD+ Display
-              16MP + 5MP | 25MP Front Camera
-              4045 mAh Battery
-              Qualcomm Snapdragon 710 Octa Core 2.2 GHz AIE Processor
-              Dual Nano SIM Slot and Memory Card Slot
-              VOOC Flash Charge 3.0</p>
-            <button class="edit">Edit</button>
-            <button class="delete">Delete</button>
-          </div>
-        </li>
-        -->
-        
       </ul>
     </main>
 
