--- a/view.html
+++ b/view.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Product</title>
-    <link rel="stylesheet" href="view.css">
-</head>
-<body>
-    <div id="add-popup">
-        <div class="heading">Update Product</div>
-        <div class="middle">
-          <label for="title">Title:</label> <br />
-          <input type="text" id="title" /> <br />
-          <label for="imageUrl">Image URL:</label> <br>
-          <input type="text" id="imageUrl" /> <br />
-          <label for="price">Price:</label> <br>
-          <input type="text" id="price" /> <br>
-          <label for="description">Description:</label> <br>
-          <input type="text" id="description">
-        </div>
-        <div class="buttons">
-          <button class="cancel-btn">Cancel</button>
-          <button class="add-btn">Update</button>
-        </div>
-      </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>View Product</title>
+    <link rel="stylesheet" href="view.css" />
+    <script src="view.js" defer></script>
+  </head>
+  <body>
+    
+  </body>
 </html>
